update release names

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,29 @@ jobs:
       - name: Generate release name
         id: release_name
         run: |
-          echo "release_name=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+          echo "release_name=$(python3 -c <<EOF
+import subprocess
+import datetime
+
+tags_process = subprocess.Popen(["git", "for-each-ref", "--sort=creatordate", "--format", "'%(refname) %(taggerdate)'", "refs/tags"], stdout=subprocess.PIPE)
+tags = ""
+
+while True:
+	data = tags_process.stdout.read(1)
+	if not data:
+		break
+
+	tags += data.decode("UTF-8")
+
+for tag in reversed(tags.splitlines()):
+	tag = tag[1:-2].replace("refs/tags/", "")
+	if not tag.startswith("v"):
+		continue
+
+	time = datetime.datetime.utcnow().strftime("%Y%m%d%H%M%S")
+	print(f"{tag}+{time}")
+	break
+EOF)" >> $GITHUB_OUTPUT
       - name: Release
         uses: softprops/action-gh-release@v0.1.15
         with:
