--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,5 +32,5 @@ jobs:
         uses: softprops/action-gh-release@v0.1.15
         with:
           prerelease: true
-          name: Test ${{ steps.release_name.outputs.release_name }}
+          name: ${{ steps.release_name.outputs.release_name }}
           tag_name: ${{ steps.release_name.outputs.release_name }}
