--- a/.github/workflows/sitemap.yaml
+++ b/.github/workflows/sitemap.yaml
@@ -48,7 +48,7 @@ jobs:
         run: |
           COMMIT_HASH=`git rev-parse --short HEAD`
           echo "Latest commit short hash: $COMMIT_HASH"
-          echo "commit_message=update sitemap for $COMMIT_HASH" >> $GITHUB_OUTPUT
+          echo "commit_message=update sitemap for commit $COMMIT_HASH" >> $GITHUB_OUTPUT
       - name: Create new branch and push changes
         if: ${{ steps.requires_update.outputs.update_required == 'UPDATE-REQUIRED' }}
         uses: EndBug/add-and-commit@v9
@@ -57,3 +57,9 @@ jobs:
           new_branch: ${{ steps.branch_name.outputs.branch_name }}
           default_author: github_actions
           message: ${{ steps.commit_message.outputs.commit_message }}
+      - name: Create pull request
+        uses: peter-evans/create-pull-request@v5
+        with:
+          branch: ${{ steps.branch_name.outputs.branch_name }}
+          delete-branch: true
+          title: ${{ steps.commit_message.outputs.commit_message }}
