--- a/.github/workflows/sitemap.yaml
+++ b/.github/workflows/sitemap.yaml
@@ -64,6 +64,11 @@ jobs:
           new_branch: ${{ steps.branch_name.outputs.branch_name }}
           default_author: github_actions
           message: ${{ steps.commit_message.outputs.commit_message }}
+  pull-request:
+    name: Create Pull Request
+    permissions: write-all
+    needs: create-release
+    steps:
       - name: Create pull request
         if: ${{ steps.requires_update.outputs.update_required == 'UPDATE-REQUIRED' }}
         uses: peter-evans/create-pull-request@v5
