--- a/.github/workflows/sitemap.yaml
+++ b/.github/workflows/sitemap.yaml
@@ -13,11 +13,6 @@ jobs:
     name: Generate Sitemap
     runs-on: ubuntu-latest
     permissions: write-all
-    outputs:
-      update_required: ${{ steps.requires_update.outputs.update_required }}
-      branch_name: ${{ steps.branch_name.outputs.branch_name }}
-      pull_base: ${{ steps.pull_base.outputs.pull_base }}
-      commit_message: ${{ steps.commit_message.outputs.commit_message }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -61,29 +56,10 @@ jobs:
           CURRENT_BRANCH=`git rev-parse --abbrev-ref HEAD`
           echo "A pull request will be created with the base branch $CURRENT_BRANCH"
           echo "pull_base=$CURRENT_BRANCH" >> $GITHUB_OUTPUT
-      - name: Create new branch and push changes
-        if: ${{ steps.requires_update.outputs.update_required == 'UPDATE-REQUIRED' }}
-        uses: EndBug/add-and-commit@v9
-        with:
-          add: "sitemap.xml"
-          new_branch: ${{ steps.branch_name.outputs.branch_name }}
-          default_author: github_actions
-          message: ${{ steps.commit_message.outputs.commit_message }}
-  pull-request:
-    name: Create Pull Request
-    permissions: write-all
-    needs: create-release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        if: ${{ needs.create-release.outputs.update_required == 'UPDATE-REQUIRED' }}
-        uses: actions/checkout@v3
-      - name: Fetch changes from target branch
-        if: ${{ needs.create-release.outputs.update_required == 'UPDATE-REQUIRED' }}
-        run: |
-          git checkout -b ${{ needs.create-release.outputs.branch_name }}
-          git pull origin ${{ needs.create-release.outputs.branch_name }}
       - name: Create pull request
-        if: ${{ needs.create-release.outputs.update_required == 'UPDATE-REQUIRED' }}
-        run: |
-          gh pr create -f
+        if: ${{ steps.requires_update.outputs.update_required == 'UPDATE-REQUIRED' }}
+        uses: peter-evans/create-pull-request@v5
+        with:
+          branch: ${{ needs.create-release.outputs.branch_name }}
+          base: ${{ needs.create-release.outputs.pull_base }}
+          title: ${{ needs.create-release.outputs.commit_message }}
