--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,10 +3,10 @@ name: Create Release
 on:
   push:
     branches:
-      - "**"
+      - "none"
   pull_request:
     branches:
-      - "**"
+      - "none"
 
 jobs:
   create-release:
